Implement payment via functions, add amount input

--- a/.env.default
+++ b/.env.default
@@ -2,3 +2,5 @@ CONTENTFUL_SECRET_KEY=
 CONTENTFUL_SPACE_ID=
 CONTENTFUL_STATIC_TEXT_ID=
 STRIPE_PUBLISHABLE_KEY=
+STRIPE_SECRET_KEY=
+STRIPE_PRODUCT_ID=
