Update texts, use amount input only for custom payment, add new images

--- a/.env.default
+++ b/.env.default
@@ -1,3 +1,4 @@
+ENV=
 DEFAULT_LANG=ru
 LANGS=ru,en,es
 BASE_URL=
@@ -6,4 +7,3 @@ CONTENTFUL_SPACE_ID=
 CONTENTFUL_STATIC_TEXT_ID=
 STRIPE_PUBLISHABLE_KEY=
 STRIPE_SECRET_KEY=
-STRIPE_PRODUCT_ID=
