--- a/netlify/functions/envSettings.json
+++ b/netlify/functions/envSettings.json
@@ -3,27 +3,27 @@
     "products": [
       {
         "key": "5_DOLLARS",
-        "stripeId": "prod_IbKQWxBs2znOYy"
+        "stripeId": "prod_IbI5pDisHBgJxT"
       },
       {
         "key": "10_DOLLARS",
-        "stripeId": "prod_IbKRFJITfNKaj1"
+        "stripeId": "prod_IbNUQXrHQ0Do4L"
       },
       {
         "key": "25_DOLLARS",
-        "stripeId": "prod_IbKRmMZAqL6IDM"
+        "stripeId": "prod_IbNUdD0Pho05eg"
       },
       {
         "key": "50_DOLLARS",
-        "stripeId": "prod_IbKROvifqeNrBt"
+        "stripeId": "prod_IbNVWxF94uy0zM"
       },
       {
         "key": "100_DOLLARS",
-        "stripeId": "prod_IbKRUk98euMY8T"
+        "stripeId": "prod_IbNVSxbBdFnKDG"
       },
       {
         "key": "10_DOLLARS_US",
-        "stripeId": "prod_Kn0BWQ7fnfdpWZ"
+        "stripeId": "prod_IdF6Cx3hcJ6lKg"
       },
       {
         "key": "CUSTOM",
@@ -31,27 +31,27 @@
       },
       {
         "key": "7_DOLLARS_RU",
-        "stripeId": "prod_KmyT5L2ucguGYK"
+        "stripeId": "prod_Kn0lns1f7OIKt5"
       },
       {
         "key": "20_DOLLARS_RU",
-        "stripeId": "prod_KmyTxVN1BhCbOZ"
+        "stripeId": "prod_Kn0ljfrvFs6d4b"
       },
       {
         "key": "40_DOLLARS_RU",
-        "stripeId": "prod_KmyUmHn9tEqU9W"
+        "stripeId": "prod_Kn0lpynMfygsog"
       },
       {
         "key": "75_DOLLARS_RU",
-        "stripeId": "prod_KmyV5Lo28pI1Dr"
+        "stripeId": "prod_Kn0lio99xeEj5t"
       },
       {
         "key": "250_DOLLARS_RU",
-        "stripeId": "prod_KmyVX2fcHkAdHs"
+        "stripeId": "prod_Kn0lLNdbfuh96c"
       },
       {
         "key": "CUSTOM_RU",
-        "stripeId": "prod_KmyVKa53elYWJ6"
+        "stripeId": "prod_Kn0lJ3DQDuzR4B"
       }
     ]
   },
